--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
@@ -12,9 +12,9 @@
       <p class="infos_page">Identifiant du marégraphe : {{id_maregraphe}}</p>
       <p class="infos_page">Ville : {{ville_maregraphe}}</p>
       <div class="button_header">
-        <button *ngIf="isAdmin" class="Ajouter" id="Ajouter"  type="button" (click)="showAddMeta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
-        <a href="{{origine}}"><button class="bouton_retour">Retour</button></a>
-        <button class="export" id="export" type="button"> <img src="assets\telechargement2.png" height="18" width="18"> Télécharger l'export SML du marégraphe</button>  
+        <div class="retour"><a href="{{origine}}"><button class="bouton_retour">Retour</button></a></div>
+        <div class="part_export"><button class="export" id="export" type="button"> <img src="assets\telechargement.png" height="18" width="18"> Télécharger l'export SML</button>  </div>
+        <div class="part_ajout"><button *ngIf="isAdmin" class="Ajouter" id="Ajouter"  type="button" (click)="showAddMeta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button></div>
       </div>
     </div>
 
